[FIX] wrong text-align

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,7 +56,7 @@ code {
 
 .theme-code-block div[class^="codeBlockTitle"] {
   unicode-bidi: plaintext;
-  text-align: end;
+  text-align: right;
 }
 
 .theme-code-block pre code {
